Prevent date overflow.

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -542,10 +542,9 @@ body
       font-size: 9pt
       letter-spacing: 1px
 
-      width: 30%
-
     .left
       font-weight: bold
+      width: 30%
 
       @extend .noselect
 
@@ -555,13 +554,14 @@ body
     .right
       position: relative
       top: 40px
-      right: -245px
+      right: -190px
 
       font-style: italic
       text-align: right
       transition: all 1s
 
       opacity: 0
+      width: 40%
 
       @extend .noselect
 
